# mstar-sample-atr

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  train.py
.hydra/: config.yaml  hydra.yaml
configs/: config.yaml
configs/analysis/: metrics.yaml  umap.yaml
configs/dataset/: mstar.yaml  sample.yaml
configs/logging/: wandb.yaml
configs/model/: resnet18.yaml
configs/training/: default.yaml
scripts/: compute_sample_stats.py  compute_stats.py  embedding_metrics.py  sweep_k.sh  visualize_umap.py
src/: dataset.py  embedding_utils.py  engine.py  evaluate.py  model.py  utils.py
